# clay

./: CMakeLists.txt
examples/ncurses-example/: CMakeLists.txt  main.c
renderers/ncurses/: README.md  clay_renderer_ncurses.c
